scripts/k8s/postgres.yml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-backend
spec:
  serviceName: postgres-backend-service
  replicas: 1
  selector:
    matchLabels:
      app: postgres-backend
  template:
    metadata:
      labels:
        app: postgres-backend
    spec:
      containers:
        - name: postgres-backend
          image: postgres:15.3
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pv-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: pv-data
          persistentVolumeClaim:
            claimName: postgres-pvc
---

apiVersion: v1
kind: Service
metadata:
  name: postgres-backend-service
spec:
  clusterIP: None
  selector:
    app: postgres-backend
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
