scripts/k8s/redis.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: chaincue-real-estate-redis
spec:
  serviceName: "chaincue-real-estate-redis"
  replicas: 1
  selector:
    matchLabels:
      app: chaincue-real-estate-redis
  template:
    metadata:
      labels:
        app: chaincue-real-estate-redis
    spec:
      containers:
        - name: redis
          image: redis:7.2.3
          ports:
            - containerPort: 6379
          command: [ "redis-server", "--requirepass", "redis" ]

---

apiVersion: v1
kind: Service
metadata:
  name: chaincue-real-estate-redis
spec:
  selector:
    app: chaincue-real-estate-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
