scripts/k8s/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chaincue-real-estate-go
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chaincue-real-estate-go
  template:
    metadata:
      labels:
        app: chaincue-real-estate-go
    spec:
      containers:
        - name: chaincue-real-estate-go
          image: chaincue-real-estate-go:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: chaincue-real-estate-go
spec:
  selector:
    app: chaincue-real-estate-go
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chaincue-real-estate-go-ingress
spec:
  rules:
    - host: local.chaincue.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chaincue-real-estate-go
                port:
                  number: 8080
